--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Aura</string>
+    <string name="wave_desc">Wave</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="create_acc">Create an account</string>
+    <string name="username">Username</string>
+    <string name="email">E-mail</string>
+    <string name="username_email">Username/E-mail</string>
+    <string name="password">Password</string>
+    <string name="or">OR</string>
 </resources>
