--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,10 @@
     <string name="register">Register</string>
     <string name="create_acc">Create an account</string>
     <string name="username">Username</string>
+    <string name="full_name">Full name</string>
     <string name="email">E-mail</string>
     <string name="username_email">Username/E-mail</string>
     <string name="password">Password</string>
+    <string name="repeat_password">Repeat password</string>
     <string name="or">OR</string>
 </resources>
