--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
+    <string name="eco_gauge_label">eCO2</string>
+    <string name="no_data_label">No data</string>
     <string name="menu_slideshow">Slideshow</string>
 </resources>
