Init the ble fragment UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,8 @@
     <string name="menu_dashboard">Dashboard</string>
     <string name="menu_bluetooth">Bluetooth</string>
 
+    <string name="ble_name_placeholder">Device name</string>
+    <string name="ble_mac_placeholder">Device mac</string>
+    <string name="connect">Connect</string>
+
 </resources>
