Add scanning buttton + kinda INIT BLEAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="ble_name_placeholder">Device name</string>
     <string name="ble_mac_placeholder">Device mac</string>
     <string name="connect">Connect</string>
+    <string name="scan">Scan</string>
 
 </resources>
