--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="ble_mac_placeholder">Device mac</string>
     <string name="connect">Connect</string>
     <string name="scan">Scan</string>
+    <string name="stop">Stop</string>
 
 </resources>
